# Liquid-Metal-Antenna-Optimizer

./: .env.example  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.cloud  EVOLUTIONARY_ENHANCEMENTS_SUMMARY.md  GENERATION5_BREAKTHROUGH_SUMMARY.md  GENERATION6_RESEARCH_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_README.md  README.md  RESEARCH_DOCUMENTATION.md  RESEARCH_IMPLEMENTATION_SUMMARY.md  RESEARCH_MANUSCRIPT.md  TESTING.md  autonomous_research_publication_pipeline.py  autonomous_sdlc_generation6_demo.py  comprehensive_quality_gates.py  comprehensive_tests.py  demo.py  deployment_report_lma-1755110282.json  deployment_report_lma-1755225759.json  deployment_report_lma-1755371448.json  deployment_summary_final.json  docker-compose.yml  generation2_robustness_demo.py  generation3_scaling_demo.py  generation3_scaling_demo_simple.py  generation3_scaling_simple.py  generation5_breakthrough_demo.py  production_deployment_final.py  production_deployment_generation5.py  production_deployment_package.py  pyproject.toml  pytest.ini  quality_gates.py  quality_gates_comprehensive.py  quality_gates_final.py  quality_gates_final_report.json  quality_gates_report.json  quality_gates_research_enhanced.py  (+13 more)
examples/: basic_usage.py  complete_demo.py  generation1_basic_demo.py  generation1_optimization_demo.py  generation2_robustness_demo.py  generation3_research_demo.py
kubernetes/: deployment.yaml  monitoring.yaml
liquid_metal_antenna/: __init__.py  _version.py  antenna_geometry.py  differentiable_optimizer.py  em_solver.py  neural_surrogate.py
liquid_metal_antenna/core/: __init__.py  antenna_spec.py  optimizer.py  optimizer_fallback.py
liquid_metal_antenna/deployment/: cloud_native_service.py
liquid_metal_antenna/designs/: __init__.py  advanced.py  array.py  beam_steering.py  metamaterial.py  monopole.py  patch.py
liquid_metal_antenna/i18n/: global_support.py
liquid_metal_antenna/liquid_metal/: __init__.py  flow.py  materials.py
liquid_metal_antenna/optimization/: __init__.py  advanced_performance.py  bayesian.py  caching.py  concurrent_old.py  high_performance_scaling.py  multi_objective.py  neural_surrogate.py  performance.py
liquid_metal_antenna/research/: __init__.py  adaptive_hyperparameter_evolution.py  ai_driven_research_acceleration.py  automated_manuscript_generation.py  benchmarks.py  comparative_benchmarking.py  comparative_study.py  graph_neural_surrogate.py  (+12 more)
tests/: conftest.py  test_antenna_optimizer.py  test_basic.py  test_core_antenna_spec.py  test_evolutionary_enhancements.py  test_generation5_algorithms.py  test_integration.py  test_optimization_lma.py  test_performance_benchmarks.py  test_research_algorithms.py  test_security_validation.py  test_solvers_fdtd.py
(+20 files in other folders)
